--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,1 +1,23 @@
-<p>car works!</p>
+<div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+<table *ngIf="dataLoaded==true" class="table">
+  <thead>
+    <tr>
+      <th>Brand Name</th>
+      <th>Color Name</th>
+      <th>Car Name</th>
+      <th>Model Year</th>
+      <th>Daily Price</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tr *ngFor="let car of cars">
+    <td>{{ car.brandId }}</td>
+    <td>{{ car.colorId }}</td>
+    <td>{{ car.carName }}</td>
+    <td>{{ car.modelYear }}</td>
+    <td>{{ car.dailyPrice }}</td>
+    <td>{{ car.description }}</td>
+  </tr>
+</table>
