--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,18 @@
             <app-car></app-car>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-3">
+            <app-color></app-color>
+        </div>
+        <div class="col-md-9">
+            <app-customer></app-customer>
+        </div>
+        
+    </div>
+    <div class="row">
+        <app-rental></app-rental>
+        
+    </div>
     <router-outlet></router-outlet>
 </div>
