--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,7 +1,11 @@
-<ul class="list-group">
-    <li class="list-group-item">An item</li>
-    <li class="list-group-item">A second item</li>
-    <li class="list-group-item">A third item</li>
-    <li class="list-group-item">A fourth item</li>
-    <li class="list-group-item">And a fifth one</li>
-</ul>
+<table class="table">
+    <thead>
+      <tr>
+        <th>Brand Name</th>
+      </tr>
+    </thead>
+    <tr *ngFor="let brand of brands">
+      <td>{{ brand.brandName }}</td>
+      
+    </tr>
+  </table>
