--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -4,20 +4,18 @@
 <table *ngIf="dataLoaded==true" class="table">
   <thead>
     <tr>
-      <th>Brand Name</th>
-      <th>Color Name</th>
-      <th>Car Name</th>
-      <th>Model Year</th>
+      <th>Id</th>
+      <th>Name</th>
+      <th>Brand</th>
+      <th>Color</th>
       <th>Daily Price</th>
-      <th>Description</th>
     </tr>
   </thead>
   <tr *ngFor="let car of cars">
-    <td>{{ car.brandId }}</td>
-    <td>{{ car.colorId }}</td>
+    <td>{{ car.carId }}</td>
     <td>{{ car.carName }}</td>
-    <td>{{ car.modelYear }}</td>
+    <td>{{ car.brandName }}</td>
+    <td>{{ car.colorName }}</td>
     <td>{{ car.dailyPrice }}</td>
-    <td>{{ car.description }}</td>
   </tr>
 </table>
