--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,1 +1,11 @@
-<p>color works!</p>
+<table class="table">
+    <thead>
+      <tr>
+        <th>Color Name</th>
+      </tr>
+    </thead>
+    <tr *ngFor="let color of colors">
+      <td>{{ color.colorName }}</td>
+      
+    </tr>
+  </table>
