brand ve color a göre listelemeler tamamlandı fakat dto sınıfı düzenlenecek

--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,11 +1,7 @@
-<table class="table">
-    <thead>
-      <tr>
-        <th>Color Name</th>
-      </tr>
-    </thead>
-    <tr *ngFor="let color of colors">
-      <td>{{ color.colorName }}</td>
-      
-    </tr>
-  </table>
+<ul class="list-group">
+  <li (click)="refreshCurrentColor()" [class]="getAllColorClass()" routerLink="/cars">Tüm Ürünler</li>
+  <li (click)="setCurrentColor(color)" 
+  routerLink = "/cars/color/{{color.colorId}}"
+  *ngFor="let color of colors" 
+  [class]="getCurrentColorClass(color)">{{color.colorName}}</li>
+</ul>
