--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,11 +1,7 @@
-<table class="table">
-    <thead>
-      <tr>
-        <th>Brand Name</th>
-      </tr>
-    </thead>
-    <tr *ngFor="let brand of brands">
-      <td>{{ brand.brandName }}</td>
-      
-    </tr>
-  </table>
+<ul class="list-group">
+  <li (click)="refreshCurrentBrand()" [class]="getAllBrandClass()" routerLink="/cars">Tüm Ürünler</li>
+  <li (click)="setCurrentBrand(brand)" 
+  routerLink = "/cars/brand/{{brand.brandId}}"
+  *ngFor="let brand of brands" 
+  [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+</ul>
