--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,41 +1,50 @@
-<!-- <div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
-  <span class="visually-hidden">Loading...</span>
-</div>
-<table *ngIf="dataLoaded==true" class="table">
-  <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>Brand</th>
-      <th>Color</th>
-      <th>Daily Price</th>
-    </tr>
-  </thead>
-  <tr *ngFor="let car of cars">
-    <td>{{ car.carId }}</td>
-    <td>{{ car.carName }}</td>
-    <td>{{ car.brandName }}</td>
-    <td>{{ car.colorName }}</td>
-    <td>{{ car.dailyPrice }}</td>
-  </tr>
-</table> -->
+<form class="row g-1 bg-dark bg-gradient">
+  <div class="col-2">
+    <select  class="form-select" aria-label="Model adı">
+      <option ></option>
+    </select>
+  </div>
+  <div class="col-2">
+    <select   class="form-select" aria-label="Renk adı">
+      <option  ></option>
+    </select>
+  </div>
+  <div class="col-1">
+    <button  type="submit" class="btn btn-primary mb-3">Filtrele</button>
+  </div>
+  <div class="col-1">
+    <button  type="submit" class="btn btn-danger mb-3">Temizle</button>
+  </div>  
+  <div class="col-6">
+    <div class="d-flex justify-content-end align-items-center">
+      <div class="col-sm-3 mb-1 text-light">
+        <label>Model Arama: </label>        
+      </div>
+      <div class="mb-1">
+        <input type="text"  class="form-control" placeholder="Model adı giriniz">        
+      </div>
+    </div>
+  </div>  
+</form>
 
 <div class="row">
   <div class="col-md-4" *ngFor = "let car of cars">
     <div class="card" style="width: 18rem;">
       <img [src] ="getCarImage(car)" class="card-img-top" alt="...">
       <div class="card-body">
-        <h4 class="card-title text-center">{{car.carName |uppercase}} </h4>
+        <h4 class="card-title text-center">{{car.carName | uppercase}} </h4>
         <h6 class="text-center">{{car.brandName}} </h6>
       </div>
       <ul class="list-group list-group-flush text-center text-bolder">
         <li class="list-group-item"><i><b>Model Yılı</b></i> | {{car.modelYear}}</li>
         <li class="list-group-item"><i><b>Günlük Fiyat</b></i> | {{car.dailyPrice | currency:"₺" }}</li>
-        <li class="list-group-item"><i><b>Aylık Fiyat</b></i> | {{car.dailyPrice  | currency:"₺"}}</li>
+        <li class="list-group-item"><i><b>Aylık Fiyat</b></i> | {{car.dailyPrice  | monthlyPriceAdded:60 | currency:"₺"}}</li>
 
       </ul>
       <div class="card-body text-center">
-        <a href="#" class="btn btn-outline-secondary" >Detaya Git</a>
+        <a href="#" li (click)="setCurrentCarDetail(car)" 
+        routerLink = "/cars/carDetailPage/{{car.carId}}"
+        class="btn btn-outline-secondary" >Detaya Git</a>
       
       </div>
     </div>
@@ -43,3 +52,4 @@
   </div>
  
 </div>
+
