--- a/src/app/components/car-detail-page/car-detail-page.component.html
+++ b/src/app/components/car-detail-page/car-detail-page.component.html
@@ -1,40 +1,255 @@
-<div class="card" style="width:100%;margin-top: 20px;">
-
-    <div class="row"style="max-height: 80%;">
+<!-- <div class="row">
+    <div class="col-md-8">
+      <div id="CarImagesCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button *ngFor="let imagePath of carImagePaths; let i = index" type="button"
+            data-bs-target="#CarImagesCarousel" attr.data-bs-slide-to="{{i}}" class="{{(i == 0) ? 'active' : ''}}"
+            attr.aria-label="Slide {{i}}"></button>
+        </div>
+        <div class="carousel-inner">
+          <div *ngFor="let imagePath of carImagePaths; let i = index"
+            class="{{(i == 0) ? 'carousel-item active' : 'carousel-item' }}">
+            <img [src]="imageUrl+imagePath" height="288" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <div *ngIf="carImagePaths.length != 1">
+          <button class="carousel-control-prev" type="button" data-bs-target="#CarImagesCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#CarImagesCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
   
+      </div>
     </div>
-      <div  style="height:95%; width: 100%;" >
-        <div *ngFor="let imagePath of carImagePaths; let index=index" >
-          <img [src]="imageUrl+imagePath" alt="image slide"class="image-fluid" style=" height:400px;width: 100%; object-fit: cover">
-      
-          <div class="carousel-caption">
-            <h4>Görsel: {{index+1}} </h4>
-            <p></p>
+  
+    <div class="col-md-4">
+      <ul class="list-group">
+        <li class=" list-group-item bg-primary bg-gradient text-light text-center mb-1 rounded ">
+          <strong>Araç Detayları</strong>
+        </li>
+        <li class="list-group-item"><b>Marka: </b>{{carDetail.brandName}}</li>
+        <li class="list-group-item"><b>Renk: </b>{{carDetail.colorName}}</li>
+        <li class="list-group-item"><b>Model yılı: </b>{{carDetail.modelYear}}</li>
+        <li class="list-group-item"><b>Açıklama: </b>{{carDetail.description}}</li>
+        <li class="list-group-item text-center"><button onClick="alert('Kiralama işlemi henüz yapılamıyor.')"
+            class="btn btn-success" role="button">Kirala ({{carDetail.dailyPrice}} ₺)</button></li>
+      </ul>
+    </div>
+  </div> -->
+
+<div
+  *ngIf="dataLoaded == true"
+  class="modal fade"
+  id="araciSepeteEkle"
+  tabindex="-1"
+  aria-labelledby="araciSepeteEkleBaslik"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="araciSepeteEkleBaslik">
+          Aracı Sepete Ekle
+        </h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <form>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-md-5 d-flex align-items-center border border-gray">
+              <img
+                [src]="imageUrl+carImagePaths[0]"
+                height="120"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+
+            <div class="col-md-7">
+              <div class="card text-center" style="width: 16.5rem">
+                <div class="card-body">
+                  <h3 class="card-title">
+                    {{ carDetail.brandName }} {{ carDetail.carName }}
+                  </h3>
+                  <h5 class="card-subtitle mb-2 text-muted">Ödenecek Tutar</h5>
+                  <h4>
+                    <strong>
+                      <p
+                        *ngIf="rentalPeriod && validateRentalDates === true"
+                        class="card-text text-success"
+                      >
+                        {{
+                          carDetail.dailyPrice * rentalPeriod
+                            | currency: "":""
+                        }}₺
+                      </p>
+                    </strong>
+                  </h4>
+                </div>
+              </div>
+            </div>
+          </div>
+          <br />
+
+          <div class="form-group row">
+            <label class="col-sm-4 col-form-label text-center"
+              ><strong>Kiralama Tarihi: </strong></label
+            >
+            <div class="col-sm-8">
+              <input
+                [(ngModel)]="rentDate"
+                (ngModelChange)="validateReservationDates(rentDate,returnDate)"
+                (ngModelChange)="checkIfAnyReservationsBetweenSelectedDates(carDetail.carId, rentDate, returnDate)"
+                (ngModelChange)="calculateRentalPeriod()"
+                name="rentnDate"
+                onkeydown="return false"
+                type="date"
+                [min]="getDateNow()"
+                class="form-control"
+              />
+            </div>
+          </div>
+          <div *ngIf="rentDate" class="form-group row">
+            <label class="col-sm-4 col-form-label text-center"
+              ><strong>Teslim Tarihi: </strong></label
+            >
+            <div class="col-sm-8">
+              <input
+                [(ngModel)]="returnDate"    
+                (ngModelChange)="validateReservationDates(rentDate,returnDate)"
+                (ngModelChange)="checkIfAnyReservationsBetweenSelectedDates(carDetail.carId, rentDate, returnDate)"      
+                (ngModelChange)="calculateRentalPeriod()"
+                name="returnDate"
+                onkeydown="return false"
+                type="date"
+                [min]="addDayToDate(convertStringToDate(rentDate),1)"
+                class="form-control"
+              />
+            </div>
+          </div>
+        </div>
+      </form>
+
+      <div *ngIf="rentalConfirmation && validateRentalDates===true">
+        <div *ngIf="rentalConfirmation.data==false">
+          <div
+            *ngIf="rentalPeriod"
+            class="alert alert-danger text-center"
+            role="alert"
+          >
+            Araç için seçili tarihler arasında başka bir rezervasyon mevcut
+          </div>
+        </div>
+        <div *ngIf="rentalConfirmation.data==true">
+          <div
+            *ngIf="rentalPeriod"
+            class="alert alert-success text-center"
+            role="alert"
+          >
+            <div>
+              Araç <strong>{{ rentalPeriod }}</strong> günlüğüne kiralanıyor
+            </div>
           </div>
         </div>
       </div>
-    
-        <!-- car detail sayfası araç detay bilgileiri -->
-        <div *ngFor="let car of cars" class="card-body">
-          <div class="card-body detailsFontInfo">
-  
-              <h5 class="card-title">
-              {{ car?.carName }} || {{ car?.brandName }}
-              </h5>
-              
-          </div>
-      
-          <ul class="list-group list-group-flush  detailsFontInfo">
-              <li class="list-group-item"><b>Color :</b> {{ car?.colorName }}</li>
-              
-              <li class="list-group-item  detailsFontInfo"> <b>Model Year :</b> {{ car?.modelYear }}</li>
-  
-              <li class="list-group-item  detailsFontInfo"> <b>Daily Price :</b> {{ car?.dailyPrice | currency: "USD":true:"1.2-2" }}</li>
-  
-              <li class="list-group-item  detailsFontInfo"><b>Description:</b> {{ car?.description }}</li>
-  
-          </ul>
+      <div *ngIf="rentDate && returnDate && validateRentalDates !== true">
+        <div class="alert alert-danger text-center" role="alert">
+          <div>Teslim tarihi, kiralama tarihinden büyük olmalıdır!</div>
+        </div>
       </div>
-      
-  
+
+      <div class="modal-footer">
+        <div *ngIf="rentalConfirmation && validateRentalDates===true">
+          <button
+            *ngIf="rentalConfirmation.data==true"
+            type="button"
+            class="btn btn-success"
+            data-bs-primary="modal"
+          >
+            Sepete Ekle
+          </button>
+        </div>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+          İptal
+        </button>
+      </div>
+    </div>
   </div>
+</div>
+
+<div *ngIf="dataLoaded == true" class="row">
+  <div class="col-md-8">
+    <div id="CarImagesCarousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button *ngFor="let imagePath of carImagePaths; let i = index" type="button"
+          data-bs-target="#CarImagesCarousel" attr.data-bs-slide-to="{{i}}" class="{{(i == 0) ? 'active' : ''}}"
+          attr.aria-label="Slide {{i}}"></button>
+      </div>
+      <div class="carousel-inner">
+        <div *ngFor="let imagePath of carImagePaths; let i = index"
+          class="{{(i == 0) ? 'carousel-item active' : 'carousel-item' }}">
+          <img [src]="imageUrl+imagePath" height="288" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <div *ngIf="carImagePaths.length != 1">
+        <button class="carousel-control-prev" type="button" data-bs-target="#CarImagesCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#CarImagesCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="col-md-4">
+    <ul class="list-group">
+      <li class="list-group-item bg-primary bg-gradient text-light text-center mb-1 rounded ">
+        <strong>Araç Detayları</strong>
+      </li>
+      <li class="list-group-item"><b>Marka: </b>{{carDetail.brandName}}</li>
+      <li class="list-group-item"><b>Renk: </b>{{carDetail.colorName}}</li>
+      <li class="list-group-item"><b>Model yılı: </b>{{carDetail.modelYear}}</li>
+      <li class="list-group-item"><b>Açıklama: </b>{{carDetail.description}}</li>
+      <button
+          class="btn btn-success"
+          role="button"
+          data-bs-toggle="modal"
+          data-bs-target="#araciSepeteEkle"
+        >
+          Kirala ({{ carDetail.dailyPrice }} ₺)
+        </button>
+    </ul>
+  </div>
+</div>
+
+
+
+<!-- <div class="row">
+    <div class="card-header">
+      <h5>Markanın Diğer Araçları</h5>
+    </div>
+    <div *ngFor="let subCar of carsOfCurrentBrand" class="card" style="width: 18rem;">
+      <div>
+        <img [src]="getImagePath(subCar.carImages[0].imagePath)" height="192" width="108" class="card-img-top" alt="...">
+      </div>
+      <div class="card-body">
+        <h5 class="card-title text-center">{{subCar.modelYear}} Model {{subCar.brandName}}</h5>
+        <h5 class="card-title text-center">{{subCar.dailyPrice}} ₺</h5>
+        <div class="text-center"><a routerLink="/cars/car-details/{{subCar.id}}"
+            class="btn btn-primary text-center">İncele</a></div>
+      </div>
+    </div>
+  </div> -->
