--- a/src/app/components/color/color.component.html
+++ b/src/app/components/color/color.component.html
@@ -1,13 +1,17 @@
+<div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+
 <ul class="list-group">
   <li class=" list-group-item bg-black bg-gradient text-light text-center mb-1 rounded ">
     <strong>Renkler</strong>
   </li>
   <div class="mb-1">
-    <input type="text" class="form-control" id="filterBrand" placeholder="Renk adı giriniz">
+    <input type="text" [(ngModel)]="filterColor" class="form-control" id="filterColor" placeholder="Renk adı giriniz">
   </div>
   <li (click)="refreshCurrentColor()" [class]="getAllColorClass()" routerLink="/cars">Tüm Ürünler</li>
   <li (click)="setCurrentColor(color)" 
   routerLink = "/cars/color/{{color.colorId}}"
-  *ngFor="let color of colors" 
+  *ngFor="let color of colors | filterPipeColor:filterColor" 
   [class]="getCurrentColorClass(color)">{{color.colorName}}</li>
 </ul>
